fix: fail closed on missing tenant context